--- a/style.css
+++ b/style.css
@@ -5,11 +5,15 @@
     box-sizing: border-box;
 }
 .container{
-width: 100%;
-height: 100vb;
-background-image: url(img/BMW1.png);
-background-position: center;
-padding: 20px 10%;
+    position: absolute;
+    width: 100%;
+    height: 100vb;
+    background-image: url(img/BMW1.png);
+    background-position: center;
+    padding: 20px 10%;
+    transition: background-image 0.3s;
+
+
 }
 .nav{
     width: 100%;
@@ -49,5 +53,33 @@ nav .btn{
     font-weight: 500px;
     font-size: 14px;
     color: #555;
-    
+
+}
+.content h3{
+    margin-top: 30px;
+    font-weight: 600;
+    font-size: 24px;
+
+}
+.colour-select div{
+    background: #333;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer;
+
+}
+.colour-select{
+    display: flex;
+    margin-top: 30px;
+}
+.colour-select #red{
+    background: red;
+}
+.colour-select #blue{
+    background: blue;
+}
+.colour-select #black{
+    background: black;
 }
