--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
     padding: 0;
     font-family: 'poppins',sans-serif;
     box-sizing: border-box;
+    
 }
 .container{
-    position: absolute;
+    
     width: 100%;
     height: 100vb;
     background-image: url(img/BMW1.png);
@@ -28,9 +29,11 @@ nav .logo{
     cursor: pointer;
 }
 nav .btn{
+    float: right;
+    display: block;
     text-decoration: none;
     color: #fff;
-    background: #333;
+    background: #2894a7;
     padding: 15px;
     border-radius: 30px;
 }
@@ -41,6 +44,8 @@ nav .btn{
 .content h2{
     color: red;
     font-size: 34px;
+    
+    
     
 }
 .content h1{
